log
Wed 15 Mar 2023 07:19:51 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:4: error: expected expression before ‘=’ token
   18 | a* = *b;
      |    ^
Compilation failed
09581c4
Wed 15 Mar 2023 07:19:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
31b9ee9
